--- a/styles/style.css
+++ b/styles/style.css
@@ -11,8 +11,8 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  font-family: open sans;
-  color: #10214e;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #073207;
 }
 
 article {
@@ -26,7 +26,7 @@ article {
   min-width: 20em;
   border-radius: 1rem;
   background: rgb(0,239,255);
-  background: linear-gradient(0deg, rgba(0,239,255,1) 40%, #4e54c8 100%);
+  background: linear-gradient(0deg, rgb(100, 255, 39) 40%, #108303 100%);
   box-shadow: 0 0 20px 20px rgba(0,0,0,.1);
   transition: .25s;
 }
@@ -41,7 +41,11 @@ header {
 
 h1 {
   margin: 2rem 0 1rem;
-  color: rgba(0,239,255,1);
+  color: rgb(174, 255, 0);
+}
+
+h2{
+  color: rgb(174, 255, 0);
 }
 
 button {
@@ -53,16 +57,16 @@ button {
   padding: .25rem;
   border: none;
   border-radius: 50%;
-  background: rgba(0,239,255,1);
+  background: rgba(174, 255, 0);
   transform: scale(.8);
   transition: .25s;
 }
 button:focus {
   outline: none;
-  background: #202592;
+  background: rgba(174, 255, 0);
 }
 button:focus svg {
-  stroke: rgba(0,239,255,1);
+  stroke: #108303;
 }
 
 svg {
@@ -84,7 +88,6 @@ img {
   height: auto;
   border: 5px solid #fff;
   border-radius: 10em;
-  box-shadow: 0 0 2px 2px rgba(0,0,0,.2);
   transition: .25s .15s;
 }
 
@@ -102,7 +105,7 @@ dl {
   margin-bottom: 0;
   padding: 5rem 0 3rem;
   text-align: center;
-  background: rgb(255,255,255);
+  background: rgb(255,255,255, 0);
 }
 
 dt {
@@ -135,13 +138,23 @@ p {
   margin: 0;
 }
 
-article > p {
+.info-bg{
   width: 100%;
   margin-top: 0;
   padding: 3rem 2rem;
-  border-radius: 0 0 1rem 1rem;
   text-align: center;
-  background: rgba(255,255,255, 0.5);
+  background: rgba(255,255,255);
+  border-top-left-radius: 20%;
+  border-top-right-radius: 20%;
+}
+
+.info-bar{
+  padding: 0.2rem;
+  margin-bottom: 10px;
+}
+
+.info-bar strong:hover{
+  color: rgba(174, 255, 0)
 }
 
 /* expand content */
