--- a/styles/style.css
+++ b/styles/style.css
@@ -1,186 +1,239 @@
-* {
+*{
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  transition: all 0.8s ease;
 }
 
-html {
-  height: 100vh;
-}
-
-body {
+body{
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  font-family: Arial, Helvetica, sans-serif;
-  color: #073207;
+  background-color: #040e47;
 }
 
-article {
+.body-dark{
+  background-color: #5f6aab;
+}
+
+.card{
   position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-  width: 50vw;
-  max-width: 25em;
-  min-width: 20em;
-  border-radius: 1rem;
-  background: rgb(0,239,255);
-  background: linear-gradient(0deg, rgb(100, 255, 39) 40%, #108303 100%);
-  box-shadow: 0 0 20px 20px rgba(0,0,0,.1);
-  transition: .25s;
+  width: 40em;
+  height: 20em;
+  border-radius: 0.5em;
+  box-shadow: 0 0 10px #000417;
+  margin: 10em;
+  background-color: #ffffff;
+  overflow: hidden;
 }
 
-header {
+.card-dark {
+  background-color: #040e47;
+}
+
+.card-box{
+  width: 100%;
+  height: 90%;
+  background-image: linear-gradient(90deg, #29c6ff, #2949ff);
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  padding: 1em;
+}
+
+#front-card{
+  display: flex;
+  border-radius: 0.5em 0.5em 0.5em 67% / 0.5em 0.5em 0% 84% ;
+}
+
+#back-card{
+  display: none;
+  border-radius: 0.5em 0.5em 67% 0.5em / 0.5em 0.5em 84% 0% ;
+}
+
+.M{
+  position: absolute;
+  top: -45%;
+  right: -20%;
+  font-size: 30em;
+  color: #ffffff;
+  opacity: 0.2;
+  font-style: italic;
+}
+
+.col-40{
+  flex: 0.4;
+  display: flex;
   justify-content: center;
   align-items: center;
-  justify-content: flex-end;
+  z-index: 2;
 }
 
-h1 {
-  margin: 2rem 0 1rem;
-  color: rgb(174, 255, 0);
+.col-60{
+  flex: 0.6;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  z-index: 2;
 }
 
-h2{
-  color: rgb(174, 255, 0);
+.text-box{
+  margin-left: 1em;
+  animation: bounce 4s infinite;
 }
 
-button {
+button{
   position: absolute;
-  right: 1rem;
-  top: 1rem;
-  width: 2.5rem;
-  height: 2.5rem;
-  padding: .25rem;
-  border: none;
+  padding: 0.2em;
+  background-color: #ffffff;
+  color: #040e47;
   border-radius: 50%;
-  background: rgba(174, 255, 0);
-  transform: scale(.8);
-  transition: .25s;
-}
-button:focus {
-  outline: none;
-  background: rgba(174, 255, 0);
-}
-button:focus svg {
-  stroke: #108303;
-}
-
-svg {
-  position: absolute;
-  top: calc(1.25rem - 12px);
-  left: calc(1.25rem - 12px);
-  stroke: #4e54c8;
-  transition-delay: .25s;
-}
-button svg:nth-of-type(2) {
-  opacity: 0;
-  transition-delay: 0ms;
-}
-
-img {
-  position: relative;
-  top: 2rem;
-  width: 10em;
-  height: auto;
-  border: 5px solid #fff;
-  border-radius: 10em;
-  transition: .25s .15s;
-}
-
-dl {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-areas:
-    "html-dd css-dd js-dd"
-    "html-dt css-dt js-dt"
-    ;
-  justify-items: center;
-  align-items: start;
-  width: 100%;
-  margin-top: -3rem;
-  margin-bottom: 0;
-  padding: 5rem 0 3rem;
-  text-align: center;
-  background: rgb(255,255,255, 0);
-}
-
-dt {
-  margin-top: .25rem;
-  padding-top: .25rem;
-  border-top: 1px solid rgba(0,0,0,0.3);
+  border: none;
   font-weight: bold;
-}
-dt:nth-of-type(1) {
-  grid-area: html-dt;
-}
-dt:nth-of-type(2) {
-  grid-area: css-dt;
-  transform: translateY(1rem);
-}
-dt:nth-of-type(3) {
-  grid-area: js-dt;
+  width: 2em;
+  height: 2em;
+  cursor: pointer;
+  z-index: 3;
 }
 
-dd {
-  margin: 0;
-  padding-left: .3rem;
-  transition: .25s .3s;
-}
-dd:nth-of-type(2){  
-  transform: translateY(1rem);
+button:hover{
+  background-color: #040e47;
+  color: #ffffff;
 }
 
-p { 
-  margin: 0;
+.btn-turn{
+  top: 4%;
+  right: 2%;
 }
 
-.info-bg{
-  width: 100%;
-  margin-top: 0;
-  padding: 3rem 2rem;
+.btn-dark{
+  top: 4%;
+  right: 8%;
+}
+
+h1{
+  color: #040e47;
+  background-color: #ffffff;
+  padding: 0.4em;
+  border-radius: 2em;
   text-align: center;
-  background: rgba(255,255,255);
-  border-top-left-radius: 20%;
-  border-top-right-radius: 20%;
+  font-size: 2.5em;
+  width: 8em;
+  animation: glow-effect 4s infinite;
 }
 
-.info-bar{
-  padding: 0.2rem;
-  margin-bottom: 10px;
+.h1-dark{
+  color: #ffffff;
+  background-color: #040e47;
+  animation: glow-effect-dark 4s infinite;
 }
 
-.info-bar strong:hover{
-  color: rgba(174, 255, 0)
+p{
+  color: #ffffff;
+  font-style: italic;
+  text-align: center;
+  font-size: 1.2em;
+  margin-top: 10px;
 }
 
-/* expand content */
-body.expand {
-  font-size: 1.15em;
+span{
+  color: #2949ff;
+  animation: color-changer 5s infinite;
 }
 
-body.expand article {
-  width: 60vw;
-  max-width: 60vw;
+img{
+  border-radius: 50%;
+  border: 0.2em solid #ffffff;
+  width: 80%;
+  height: 80%;
 }
 
-body.expand button svg:first-of-type {
-  opacity: 0;
-  transition-delay: 0ms;
+img:hover{
+  scale: 1.05;
 }
 
-body.expand button svg:nth-of-type(2) {
-  opacity: 1;
-  transition-delay: .25s;
+.img-dark{
+  border: 0.2em solid #040e47;
 }
 
-body.expand dd {
-  font-size: 1.75em;
+ul{
+  padding: 1em;
 }
 
-body.expand img {
-  width: 15em;
+li{
+  color: #ffffff;
+  padding: 0.2em;
+  margin-bottom: 1em;
 }
+
+.stars{
+  margin-left: 1em;
+  color: #2949ff;
+  font-weight: bold;
+  font-style: italic;
+  background-color: #ffffff;
+  padding: 0.5em;
+  border-radius: 1em;
+}
+
+.stars-dark{
+  background-color: #040e47;
+}
+
+.shine-box{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1em;
+  height: 100%;
+  background-color: #ffffff;
+  box-shadow: 0 0 10px 20px #ffffff;
+  opacity: 0.1;
+  z-index: 4;
+  animation: shine-effect 3s infinite;
+}
+
+@keyframes color-changer {
+  from {color: #2949ff;}
+  to {color: #29c6ff;}
+}
+
+@keyframes glow-effect {
+  from {box-shadow: 0px 0px 0px #ffffff;}
+  to {box-shadow: 0px 0px 10px #ffffff;}
+}
+
+@keyframes glow-effect-dark {
+  from {box-shadow: 0px 0px 0px #29c6ff;}
+  to {box-shadow: 0px 0px 10px #29c6ff;}
+}
+
+@keyframes bounce {
+  0% {margin-bottom: 0;}
+  50% {margin-bottom: 20px;}
+  100% {margin-bottom: 0;}
+}
+
+@keyframes shine-effect {
+  from {left: 0;}
+  to {left: 100%;}
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .M{
+    right: -40%;
+  }
+
+  h1{
+    font-size: 1.5em;
+    width: 8em;
+  }
+  
+  .btn-dark{
+    right: 10%;
+  }
+}
+
